--- a/portfolio.html
+++ b/portfolio.html
@@ -3,11 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>theospatial</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Poppins:500,900" rel="stylesheet">
+  <style>
+    body {font-family: 'Open Sans', sans-serif;}
+    h1 {font-family: 'Poppins', sans-serif; font-weight: 900}
+    p {font-family: 'Open Sans', sans-serif; font-weight: 600}
+  </style>
 </head>
 
 <body>
 <section>
-  <h2>theospatial</h2>
+  <h2 style="font:>theospatial</h2>
 </section>
 <section>
   <center><h1>theodore lessman</h1>
