--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@ Nullam mattis felis ut lectus laoreet lobortis. Pellentesque habitant morbi tris
 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent pulvinar vitae metus nec ornare. Vestibulum scelerisque eros et sapien malesuada, sed consequat libero sagittis. Nam nec suscipit justo, nec semper magna. Etiam tincidunt porttitor aliquam. Duis interdum nunc et ex feugiat, ac vestibulum nunc gravida. Proin maximus lacus accumsan lorem pellentesque, vel rhoncus purus porttitor. Sed facilisis tellus id bibendum congue. Aenean mi purus, iaculis et nibh ut, gravida lacinia nisl. Morbi in nisl sit amet dolor fermentum varius ac eget libero. In vitae libero eu nisl gravida rutrum.</p>
 </section>
 <section>
-  <h4>contact me by <a href="mailto:theospatial@gmail.com">email</a>.</h4>
+  <center><h4>contact</h4></center>
 </section>
 </body>
 
