--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
 <body>
 <section>
-  <h2 style="font:>theospatial</h2>
+  <h2>theospatial</h2>
 </section>
 <section>
   <center><h1>theodore lessman</h1>
