--- a/portfolio.html
+++ b/portfolio.html
@@ -5,25 +5,28 @@
 <title>theospatial</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Poppins:500,900" rel="stylesheet">
   <style>
-    body {font-family: 'Open Sans', sans-serif;}
-    h1 {font-family: 'Poppins', sans-serif; font-weight: 900}
-    p {font-family: 'Open Sans', sans-serif; font-weight: 600}
+    body {font-family: 'Open Sans', sans-serif; }
+    h1 {font-family: 'Poppins', sans-serif; font-weight: 900; }
+    p {font-family: 'Open Sans', sans-serif; font-weight: 600; }
+    heading {background-color: black; color:white; position: sticky; }
+    main {padding: 15% 5% 15% 15%; }
+    foot {background-color: black; color:white;}
   </style>
 </head>
 
 <body>
-<section>
-  <h2>theospatial</h2>
+<section id = "heading">
+  <h2>THEOSPATIAL</h2>
 </section>
-<section>
-  <center><h1>theodore lessman</h1>
+<section id = "main">
+  <center><h1>THEODORE LESSMAN</h1>
   <h2>spatial data science and technology</h2></center>
   <h3>discovering where digital data shapes our physical world.
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer turpis nulla, venenatis non massa ultricies, pretium vestibulum lacus. Curabitur tempus arcu dui, id rhoncus ipsum sagittis nec. Sed nec pretium ligula. Morbi cursus urna nisi. Cras vulputate euismod felis, id dictum nisl eleifend sit amet. Curabitur lorem massa, fermentum sit amet congue eu, sodales ac metus. Ut ac est tincidunt, vehicula diam in, vestibulum est. Nullam id magna eu erat volutpat vehicula. Donec aliquam odio ut sapien malesuada, ut efficitur justo faucibus. Nunc interdum imperdiet gravida. Nam sollicitudin convallis justo ac tempus. Aenean quis sodales quam. Nam condimentum bibendum quam, posuere mollis odio sodales id. Mauris eleifend tellus felis, eu tempus lorem semper quis. Nulla facilisi.</br>
 Nullam mattis felis ut lectus laoreet lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi rutrum vel quam id tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In id venenatis felis, porta pretium ligula. Suspendisse semper tristique laoreet. Nullam mauris ex, euismod non mauris eget, sollicitudin tempor leo. Duis rhoncus tortor vehicula mauris lacinia varius. Morbi sodales nulla massa. Nunc elementum, mauris vitae porttitor semper, velit diam iaculis est, et viverra elit diam vel leo. In molestie consectetur est, quis hendrerit odio posuere id. Vivamus ac porttitor tortor. Phasellus aliquam neque et dolor pellentesque tincidunt.</br>
 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent pulvinar vitae metus nec ornare. Vestibulum scelerisque eros et sapien malesuada, sed consequat libero sagittis. Nam nec suscipit justo, nec semper magna. Etiam tincidunt porttitor aliquam. Duis interdum nunc et ex feugiat, ac vestibulum nunc gravida. Proin maximus lacus accumsan lorem pellentesque, vel rhoncus purus porttitor. Sed facilisis tellus id bibendum congue. Aenean mi purus, iaculis et nibh ut, gravida lacinia nisl. Morbi in nisl sit amet dolor fermentum varius ac eget libero. In vitae libero eu nisl gravida rutrum.</p>
 </section>
-<section>
+<section id = "foot">
   <center><h4>contact</h4></center>
 </section>
 </body>
