--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,167 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>theospatial</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Poppins:500,900" rel="stylesheet">
+  <!-- using: 
+	skeleton
+	normalize 
+	------------------------------------------------ -->
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>theospatial</title>
+  <meta name="description" content="">
+  <meta name="author" content="Theodore Lessman">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!--link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"-->
+  <!--link href="https://fonts.googleapis.com/css?family=Work+Sans|Open+Sans:400,600|Poppins:500,900|Space+Mono" rel="stylesheet"-->
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="Skeleton-2.0.4/css/normalize.css">
+  <link rel="stylesheet" href="Skeleton-2.0.4/css/skeleton.css">
+  <link rel="stylesheet" href="css/theospatial.css">
+
+  <!--- JS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="js/theospatial.js"></script>
+  
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="img/favicon.png">
+
   <style>
-    body {font-family: 'Open Sans', sans-serif; }
-    h1 {font-family: 'Poppins', sans-serif; font-weight: 900; }
-    p {font-family: 'Open Sans', sans-serif; font-weight: 600; }
-    heading {background-color: black; color:white; position: sticky; }
-    main {padding: 15% 5% 15% 15%; }
-    foot {background-color: black; color:white;}
   </style>
+
 </head>
 
 <body>
-<section id = "heading">
-  <h2>THEOSPATIAL</h2>
-</section>
-<section id = "main">
-  <center><h1>THEODORE LESSMAN</h1>
-  <h2>spatial data science and technology</h2></center>
-  <h3>discovering where digital data shapes our physical world.
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer turpis nulla, venenatis non massa ultricies, pretium vestibulum lacus. Curabitur tempus arcu dui, id rhoncus ipsum sagittis nec. Sed nec pretium ligula. Morbi cursus urna nisi. Cras vulputate euismod felis, id dictum nisl eleifend sit amet. Curabitur lorem massa, fermentum sit amet congue eu, sodales ac metus. Ut ac est tincidunt, vehicula diam in, vestibulum est. Nullam id magna eu erat volutpat vehicula. Donec aliquam odio ut sapien malesuada, ut efficitur justo faucibus. Nunc interdum imperdiet gravida. Nam sollicitudin convallis justo ac tempus. Aenean quis sodales quam. Nam condimentum bibendum quam, posuere mollis odio sodales id. Mauris eleifend tellus felis, eu tempus lorem semper quis. Nulla facilisi.</br>
-Nullam mattis felis ut lectus laoreet lobortis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi rutrum vel quam id tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In id venenatis felis, porta pretium ligula. Suspendisse semper tristique laoreet. Nullam mauris ex, euismod non mauris eget, sollicitudin tempor leo. Duis rhoncus tortor vehicula mauris lacinia varius. Morbi sodales nulla massa. Nunc elementum, mauris vitae porttitor semper, velit diam iaculis est, et viverra elit diam vel leo. In molestie consectetur est, quis hendrerit odio posuere id. Vivamus ac porttitor tortor. Phasellus aliquam neque et dolor pellentesque tincidunt.</br>
-Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent pulvinar vitae metus nec ornare. Vestibulum scelerisque eros et sapien malesuada, sed consequat libero sagittis. Nam nec suscipit justo, nec semper magna. Etiam tincidunt porttitor aliquam. Duis interdum nunc et ex feugiat, ac vestibulum nunc gravida. Proin maximus lacus accumsan lorem pellentesque, vel rhoncus purus porttitor. Sed facilisis tellus id bibendum congue. Aenean mi purus, iaculis et nibh ut, gravida lacinia nisl. Morbi in nisl sit amet dolor fermentum varius ac eget libero. In vitae libero eu nisl gravida rutrum.</p>
-</section>
-<section id = "foot">
-  <center><h4>contact</h4></center>
-</section>
+  <header>
+    <div class="header">
+      <a href="./index.html" class="logo">THEO<strong>SPATIAL</strong></a>
+      <nav class="navBar"  id = "mainNav">
+		<a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
+        <a href="index.html">ABOUT</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+      </nav>
+    </div>
+  </header>
+  <div class="main">
+    <div class="container">
+      <div class = "row">
+	  <div id = "banner" class="twelve columns">
+        <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
+        <h2 id="statement"><strong>GIS PORTFOLIO</strong></h2>
+        <h3 id="statement">SELECTED WORKS</h3>
+		</div>
+      <div id="portfolio" class = "twelve columns">
+        <div id = "feature-a" class = "twelve columns">
+		  <h3><strong>1//</strong> Eugene Urban Forest Analytics Dashboard</h3>
+		  <h4>Independent Project</h4>
+		  <p class = "twelve columns">This is an <a href="https://arcg.is/mTm9z">ArcGIS Online Operations Dashboard</a> I designed to analyze Eugene's Urban Forest using City of Eugene 
+		  open data. Over the past decade, Public Works staff, interns and volunteers have been working to establish a baseline dataset of our street and park tree 
+		  inventory.  Using metrics of interest to the Urban Forestry team I designed this dashboard as something that would aid non-technical staff to obscure and 
+		  automate more complex GIS concepts such as SQL queries, while ensuring the consistiency of statistics derived from the data.  Users can watch progress 
+		  and investigate trends using live data from the City of Eugene. Filter by park or neighborhood boundary, species, and condition, and more. 
+		  (Requires ArcGIS Named User Account)</p>
+		  <div class = "ten columns"><figure><a href="./img/UF_Main.PNG"><img class = "twelve columns" src="./img/UF_Main.PNG" alt="Urban Forest Analytics (Main View)"></a></figure></div>
+		  <div class = "ten columns"><figure><a href="./img/UF_Friendly.PNG"><img class = "twelve columns" src="./img/UF_Friendly.PNG" alt="Urban Forest Analytics (Friendly Neighborhood DBH)"></a></figure></div>
+		  <div class = "ten columns"><figure><a href="./img/UF_ABSequoia.PNG"><img class = "twelve columns" src="./img/UF_ABSequoia.PNG" alt="Urban Forest Analytics (Alton Baker Giant Sequoia Total Appraised Value)"></a></figure></div>
+		  
+		  </br></br>
+		</div>
+		<div id = "feature-b" class = "twelve columns">
+		  <h3><strong>2//</strong> Street Tree Inventory and Eugene's Urban Heat Island</h3>
+		  <h4>City of Eugene</h4>
+		  <p class = "twelve columns">During my time working for the City of Eugene - Green Infrastructure, I provided GIS services for the Urban Forestry staff and interns working 
+		  on the <a href="https://www.eugene-or.gov/3678/Street-Tree-Interactive-Map">Street Tree Inventory</a>, an endeavor which The City had been working on for over a decade. 
+		  Field crews would catalog trees in the public right-of-way using an ArcGIS Collector app developed by the Parks and Open Space GIS staff. At the end of the contract, each
+			neighborhood in the city had an initial canvassing and a dataset of over 60,000 right-of-way trees were described.</br>
+			</br>
+			As neighborhoods were marked off and an updated dataset was made available for offline analysis, I queried the dataset and separated the data by neighborhood so that other 
+			staff could analyze the data to determine statistics such as estimated site value, carbon sequestration, and species distribution. This included creating tools for use in 
+			ArcMap and scripts to chain analyses and iterate through multiple folders. </br>
+			</br>
+			In addition to preparing data for Urban Forestry staff I processed, visualized, and performed preliminary analysis on Urban Heat Island data gathered by the Sustaining 
+			Urban Places Research (SUPR) Lab at Portland State University. The data had been held on a local drive for some months, so I offered to forward it to the division's GIS 
+			department so that it could be integrated into The City's server for access across all divisions. This included preprocessing and performing map algebraon a raster dataset 
+			of over 12GB, including unit conversion, change detection, and zonal statistics. By overlaying UHI data, impervious surface layers, and the street tree inventory dataset, 
+			a relationship between hard and green infrastructure could be viewed.</p>
+		  <div class = "ten columns"><figure><a href="./img/uhiABC.png"><img class = "twelve columns" src="./img/uhiABC.png" alt="Urban Heat Island - 3 Panel Map (Morning, Afternoon, Evening)"></a></figure></div>
+		  <div class = "ten columns"><figure><a href="./img/uhiAB.png"><img class = "twelve columns" src="./img/uhiAB.png" alt="Urban Heat Island - Morning to Afternoon Change Detection Map"></a></figure></div>
+		  <div class = "ten columns"><figure><a href="./img/uhiBC.png"><img class = "twelve columns" src="./img/uhiBC.png" alt="Urban Heat Island - Afternoon to Evening Change Detection Map"></a></figure></div>
+		  </br>
+		</div>
+		<div id = "feature-c" class = "twelve columns">
+		  <h3><strong>3//</strong> illumicloud</h3>
+		  <h4>University of Oregon</h4>
+		  <a href="https://illumicloudjs.appspot.com/"><img class = "twelve columns" src = "./img/illumicloud.PNG" alt = "illumicloudjs"/></a></br>
+		  <p class = "twelve columns"><a href="https://illumicloudjs.appspot.com/">illumicloudjs</a> for Firefox 60.x on Android is a JavaScript web application prototype designed
+		  for the purpose of improving spatial and temporal resolution of lighting condition data. Data recorded within the app can be interpolated to create an illuminance surface
+		  raster. The data could find use in well-lit path analysis and other applications including solar panel placement, ecological footprint or canopy cover estimation. </br>
+			</br>
+			The user opens the app (by navigating to the site), and taps "Allow Location". From there, the user can click "Record" to begin logging points at a pre-determined interval.
+			At each tick, the time, location and ambient light sensor reading (measured in lux) is attached to an id and a point is generated. As the user walks, their path is charted
+			and illuminance levels for the duration are collected. When finished, the user can export the data points to a comma-separated-values file (.csv).
+			</br>
+			</br>
+			As multiple routes are collected, they can be fed to an Arcpy script which aggregates the points into a point cloud shapefile for use in GIS software. By interpolating the 
+			points, you can generate rasters which hold illuminance data to inform nighttime lighting conditions or daytime shading.</p>
+		  <div class = "eight columns">
+		  <figure>
+			<a href="./img/emu_night_r.png"><img class = "twelve columns" src="./img/emu_night_r.png" alt="Northwest EMU Night Raster"></a>
+			<figcaption>EMU Night</figcaption>
+		  </figure>
+		  </div>
+		  <div class = "eight columns">
+		  <figure>
+			<a href="./img/condon_day_r.png"><img class = "twelve columns" src="./img/condon_day_r.png" alt="Quadrangle Outside Condon Day Raster"></a>
+			<figcaption>Quadrangle Day</figcaption>
+		  </figure>
+		  </div>
+		  
+		  </br>
+		</div>
+
+		<div id = "feature-d" class = "twelve columns">
+		  <h3><strong>4//</strong> 2021 for 2021</h3>
+		  <h4>University of Oregon, City of Eugene</h4>
+		  <a href="https://arcg.is/1rinzj"><img class = "twelve columns" src = "./img/2021.PNG" alt = "2021 for 2021"></a></br>
+		  <p class = "twelve columns"><a href="https://arcg.is/1rinzj">This ArcGIS Online Story Map</a> is an educational pamphlet for the citizens of Eugene to encourage participation
+		  in a tree planting initiative beginning in 2018. As part of a course taken in the UO College of Design, my team members and I workedwith Scott Altenhoff with City of Eugene 
+		  Urban Forestry to educate and encourage community members to volunteer a planting site for one of 2021 Giant Sequoia the city plans to place throughout the city to offset 
+		  the carbon emissions expected from the 2021 World Track and Field Championships.</br>
+			</br>
+			Using the Cascade Story template and two embedded story maps - <em>Right Tree, Right Place</em> using the Journal template, and <em>Your Tree, Your Place</em> using 
+			Crowdsource (Beta), we delivered a product which informed the reader of the environmental, economic, and social benefits of planting Giant Sequoia while conferring The 
+			City's commitment to "Right Tree, Right Place" when choosing a planting site. Additionally, the story map ended with a call to action, where the reader was able to 
+			upload a picture of their potential site, along with its geolocation, to serve as the framework for tracking planting sites for use in Eugene's street tree inventory.</br>
+			</br>
+			A portion of this presentation <a href="https://www.eugene-or.gov/3794/2021-for-2021"> was used by the City of Eugene</a>.  When working as a temporary contractor I was 
+			given the opportunity to assist in the implementation of the data collection feature I envisioned within this project. I designed and communicated the data model for the 
+			web form that Parks and Open Space IT department developed for public submission of planting sites. The form is housed as an entry in the 
+			<a href="https://www.eugene-or.gov/1776/Maintenance-Service-Request">Public Works Service Request site</a>.</p>
+		  </br>
+		</div>
+		<h4 class = "twelve columns">View additional documents from miscellaneous assignments in this index <a href="./works/">directory</a>.</h4>
+	  </div>
+    <h3>
+		<a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a>
+		<a href="https://twitter.com/theospatial"><button class = "footbutton">@theospatial</button></a>
+		<a href="https://www.linkedin.com/in/theodorelessman/"><button class = "footbutton">in/theodorelessman</button></a>
+	</h3>
+	<div class = "1/2 column u-push-right">
+	  <p>&copy 2018 Theodore Lessman</p>
+	</div>
+	  </div>
+  </div>
 </body>
 
 </html>
