--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
 
 
-				This is an <a href="https://arcg.is/mTm9z">ArcGIS Online Operations Dashboard</a> I designed to analyze Eugene's Urban Forest using City of Eugene 
+<!---				This is an <a href="https://arcg.is/mTm9z">ArcGIS Online Operations Dashboard</a> I designed to analyze Eugene's Urban Forest using City of Eugene 
 		  open data. Over the past decade, Public Works staff, interns and volunteers have been working to establish a baseline dataset of our street and park tree 
 		  inventory.  Using metrics of interest to the Urban Forestry team I designed this dashboard as something that would aid non-technical staff to obscure and 
 		  automate more complex GIS concepts such as SQL queries, while ensuring the consistiency of statistics derived from the data.  Users can watch progress 
@@ -78,7 +78,9 @@
 		  <div class = "ten columns"><figure><a href="./img/UF_Main.PNG"><img class = "twelve columns" src="./img/UF_Main.PNG" alt="Urban Forest Analytics (Main View)"></a></figure></div>
 		  <div class = "ten columns"><figure><a href="./img/UF_Friendly.PNG"><img class = "twelve columns" src="./img/UF_Friendly.PNG" alt="Urban Forest Analytics (Friendly Neighborhood DBH)"></a></figure></div>
 		  <div class = "ten columns"><figure><a href="./img/UF_ABSequoia.PNG"><img class = "twelve columns" src="./img/UF_ABSequoia.PNG" alt="Urban Forest Analytics (Alton Baker Giant Sequoia Total Appraised Value)"></a></figure></div>
-		  
+			
+-->
+
 		  </br></br>
 		</div>
 		<div id = "feature-b" class = "twelve columns">
