--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <div id = "intro" class="twelve columns">
           
             <img class="four columns" id = "about_img" src=".\img\theodore_sunset.png" alt="Theodore holding a data collection tablet in front of a street tree">
-          <div class = "eight columns"
-            <a href="portfolio.html"><h4>I create accurate data products to help you make informed decisions. </h4></a>
+            <a class = "eight columns" href="portfolio.html"><h4>I create accurate data products to help you make informed decisions. </h4></a>
             </div>
         </div>
         <a href="./doc/Resume_LessmanTheodore_2018.pdf" class="button button-primary">Download resume</a>
