updated portfolio, test upload command

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a class = "eight columns" href="portfolio.html"><h4>I create accurate data products to help you make informed decisions. </h4></a>
             </div>
         </div>
-        <a href="./doc/Resume_LessmanTheodore_2018.pdf" class="button button-primary">Download resume</a>
+        <dis class=""><a href="./doc/Resume_LessmanTheodore_2018.pdf" class="button button-primary">Download resume</a></dis>
         <h4 class="noteworthy">B.S. Spatial Data Science and Technology,</br>University of Oregon</h4>
         <h4 class="noteworthy">illumicloud - winner: </br>2018 Trussel Family Scholarship</h4>
         <h4 class="noteworthy"></h4>  
@@ -100,7 +100,7 @@
 		  <a href="https://www.linkedin.com/in/theodorelessman/"><button class = "footbutton">in/theodorelessman</button></a></h2>
         </div>
 	  <div class = "1/2 column u-push-right">
-	    <p>&copy 2018 Theodore Lessman</p>
+	    <p>&copy Theodore Lessman 2020</p>
 	  </div>
     
 	  </div>
