--- a/portfolio.html
+++ b/portfolio.html
@@ -58,14 +58,12 @@
       <div class = "row">
 	  <div id = "banner" class="twelve columns">
         <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
-        <h2 id="statement"><strong>GIS PORTFOLIO</strong></h2>
-        <h3 id="statement">SELECTED WORKS</h3>
-		</div>
+        <h2 id="statement"><strong>PORTFOLIO</strong></h2>
       <div id="portfolio" class = "twelve columns">
         <div id = "feature-a" class = "twelve columns">
 		  <h3><strong>Eugene Urban Forest Analytics Dashboard</strong></h3>
-		  <h4>Independent Project</h4>
-		  <p class = "twelve columns">
+		  <h4>self directed</h4>
+		  <p class = "twelve columns">	
 
 
 
