corrected link to works.html in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
 			<a href="https://www.eugene-or.gov/1776/Maintenance-Service-Request">Public Works Service Request site</a>.</p>
 -->		  </br>
 		</div>
-		<h4 class = "twelve columns">View additional documents from miscellaneous assignments in this index <a href="./works/">directory</a>.</h4>
+		<h4 class = "twelve columns">View additional documents from miscellaneous assignments in this index <a href="./works.html">directory</a>.</h4>
 	  </div>
     <h3>
 		<a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a>
