--- a/works.html
+++ b/works.html
@@ -61,6 +61,14 @@
           <h2 id="statement">ADDITIONAL WORK SAMPLES</h2>
        </div>
     
+       <div id = "item_01" class = "twelve columns">
+            <h4><a href = "./works/arcapi.html">Web Map ArcGIS JS API</a></h4>
+            <p class = "twelve columns">
+                A simple web map created using ArcGIS JavaScript API. Track your location on a map.
+            </p>
+  		  </br>
+          </div>
+          
 
       </div>
       <div class = "twelve columns" id="contact">
