added 3rd entry

--- a/works.html
+++ b/works.html
@@ -78,7 +78,16 @@
             </p>
             </br>
         </div>
-           
+        
+        <div id = "item_03" class = "twelve columns">
+                <h4><a href = "./works/EugeneTrees.pdf">Eugene Street Trees Supplemental Summary</a></h4>
+                <p class = "twelve columns">
+                    A short report describing some findings not included in delivered neighborhood 
+                    report that describe city-wide urban heat island interpretation and work order 
+                    statistics documenting the progress of the tree mapping effort.
+                </p>
+                </br>
+            </div>
 
       </div>
       <div class = "twelve columns" id="contact">
