added 4th and 5th entry to works.html

--- a/works.html
+++ b/works.html
@@ -80,14 +80,35 @@
         </div>
         
         <div id = "item_03" class = "twelve columns">
-                <h4><a href = "./works/EugeneTrees.pdf">Eugene Street Trees Supplemental Summary</a></h4>
-                <p class = "twelve columns">
-                    A short report describing some findings not included in delivered neighborhood 
-                    report that describe city-wide urban heat island interpretation and work order 
-                    statistics documenting the progress of the tree mapping effort.
-                </p>
-                </br>
-            </div>
+            <h4><a href = "./works/EugeneTrees.pdf">Eugene Street Trees Supplemental Summary</a></h4>
+            <p class = "twelve columns">
+                A short report describing some findings not included in delivered neighborhood 
+                report that describe city-wide urban heat island interpretation and work order 
+                statistics documenting the progress of the tree mapping effort.
+            </p>
+            </br>
+        </div>
+
+        <div id = "item_04" class = "twelve columns">
+            <h4><a href = "./works/FinalProject_Report-1.pdf">Teen Mental Health Clinic Site 
+                Selection Report</a></h4>
+            <p class = "twelve columns">
+                This analysis document details the methodology and results of a site selection for a 
+                hypothetical new mental health clinic in the Eugene/Springfield area targeted towards 
+                low-income youth. The final project for my first GIS course, GIScience I.
+            </p>
+            </br>
+        </div>
+
+        <div id = "item_05" class = "twelve columns">
+            <h4><a href = "./works/teenhealth.PNG">Teen Mental Health Clinic Site 
+                Selection Map</a></h4>
+            <p class = "twelve columns">
+                A cartographic document showing the results of the afformentioned site selection analysis.
+            </p>
+            </br>
+        </div>
+    
 
       </div>
       <div class = "twelve columns" id="contact">
