changes to works.html

--- a/works.html
+++ b/works.html
@@ -35,24 +35,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="img/favicon.png">
-
-  <style>
-  </style>
-
-</head>
-
-<body>
-  <header>
-    <div class="header">
-      <a href="./index.html" class="logo">THEO<strong>SPATIAL</strong></a>
-      <nav class="navBar"  id = "mainNav">  
-		    <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
-        <a href="index.html">ABOUT</a>
-        <a href="portfolio.html">PORTFOLIO</a>
-      </nav>
-    </div>
-  </header>
+  
   <div class="main">
     <div class="container">
       <div class = "row">
@@ -104,7 +87,7 @@
             <h4><a href = "./works/teenhealth.PNG">Teen Mental Health Clinic Site 
                 Selection Map</a></h4>
             <p class = "twelve columns">
-                A cartographic document showing the results of the afformentioned site selection analysis.
+                A cartographic document showing the results of the teen mental health site selection analysis.
             </p>
             </br>
         </div>
