revised index.html text and branding

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class = "row">
 	      <div id = "banner" class="twelve columns">
           <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
-          <h2 id="statement"><strong>GIS / DATA PRODUCT: </strong></br>DESIGN, DEVELOPMENT, ANALYSIS, and VISUALIZATION</h2>
+          <h2 id="statement"><strong>CUSTOMER CARE and </br>GIS / DATA PRODUCT: </strong></br>DESIGN, DEVELOPMENT, ANALYSIS, and VISUALIZATION</h2>
           <div id = "intro" class="nine columns">
             <img class="five columns" id = "about_img" src=".\img\theodore_sunset.png" alt="Theodore holding a data collection tablet in front of a street tree">
           </div>
@@ -84,10 +84,10 @@
             </p>
           <p class="twelve columns">
               I earned a B.S. Spatial Data Science and Technology from the University of Oregon.
-              I am seeking an opportunity to serve as a customer oriented technologist for a local government agency or tech company. 
-              I continue to expand my knowledge in programming, design, and cutting edge technologies.
-              I contribute my technical, analytical, visualization, and communication skills to work towards data-driven policy change 
-              and develop location-aware products which bring a benefit to my community.
+              I am seeking an opportunity to serve as a customer oriented technologist for a local government agency or technology company. 
+              I continue to expand my knowledge in programming, design, and cutting edge technologies, and take pride in serving my customers with honesty, accessibility, and education.
+              I contribute my technical, analytical, visualization, and communication skills provide exceptional products and services, to work towards data-driven policy change 
+              and develop innovative applications and products.
            </br></p>
        
           
