update exb, index; added bitcoin whitepaper, mine4heat img. exb new article entries exb intro, mine4heat

--- a/bitcoin.html
+++ b/bitcoin.html
@@ -41,7 +41,16 @@
   </style>
 
 </head>
+a:link { text-decoration: none; }
 
+
+a:visited { text-decoration: none; }
+
+
+a:hover { text-decoration: none; }
+
+
+a:active { text-decoration: none; }
 <body>
   <header>
     <div class="header">
@@ -58,29 +67,53 @@
     <div class="container">
         <div class = "row">
 	        <div id = "banner" class="twelve columns">
-                <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
-                <h2 id="statement"> <i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></h2>
-                <div id="bitcoin" class = "twelve columns">
-                    <div id = "entry 001" class = "twelve columns">
-		                <h3><strong>HEADING 1</strong></h3>
-		                <h4>SUBHEAD 1</h4>
+            <h1 id="name">THEODORE <strong>LESSMAN</strong></h1>
+            <h2 id="statement"> <i style="color: #EE3560;">EVERYTHING</i>&#215<strong style="color: #F2A900;">BITCOIN</strong></h2>
+            <div id="bitcoin" class = "twelve columns">
+            </br>
+              <a href="./bitcoin.pdf" style="text-decoration: none;"><button style="color: #F2A900; display: block; margin-left: auto; margin-right: auto;">READ THE BITCOIN WHITEPAPER</button></a>
+            </br></br>
+              <!--<div id = "entry 003" class = "twelve columns">
+		            <h3><strong>HEAD 3</strong></h3>
+		              <h4>SUBHEAD 3</h4>
 			            <div class = "ten columns"><figure><a href="./img/ExB_banner.png"><img class = "twelve columns" src="./img/ExB_banner.png" alt="Everything&#215Bitcoin Banner"></a></figure></div>
-		                    <p class = "twelve columns"></p>
-		                </br></br>
-		                </div>
-                        <div class = "twelve columns" id="contact">
-		                    <a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a> 
-		                    <a href="https://www.linkedin.com/in/theodorelessman/"><button class = "footbutton">in/theodorelessman</button></a></h2>
-        	                <a href="https://twitter.com/everythingxbtc"><button class = "footbutton">@everythingxbtc</button></a> 
-		                    <a href="https://astral.ninja/npub1enfjvvrakj3fc0r6pn8ftm2dkzpzwvd598lr8hez6qz76zm8vxusf009vf"><button class = "footbutton">npub...usf009vf</button></a> 
-		                </div>
-	                    <div class = "1/2 column u-push-right">
-	    	            <p>&copy 2023 Theodore Lessman</p>
-	                </div> 
+		              <p class = "twelve columns">p3</p>
+		            </br></br>
+		            </div>-->
+                <div id = "entry 002" class = "twelve columns">
+	                <h3><strong>WASTE NOT, WANT NOT</strong></h3>
+	                <h4>#mine4heat: rethinking waste in heating applications.</h4>
+			            <div class = "ten columns"><figure><a href="./img/mine4heat.PNG"><img class = "twelve columns" src="./img/mine4heat.PNG" alt="Everything&#215Bitcoin Banner"></a></figure></div>
+                  <p class = "twelve columns"></br></br>Bitcoin is an open network that allows users to acquire, store, and transact value in a way that is permissionless, without an intermediary, and with minimized trust between either party. Specialized computers, Bitcoin ASICs which are commonly called &#34miners&#34, work to batch these transactions and insert them into the globally distributed ledger. Miner operators are incentivised to find the cheapest sources of energy, which increasingly are wasted, stranded, renewable and GHG emission mitigating sources. 
+                    </br></br>Like all computers, the power (measured in Watts) required to compute, known in bitcoin as hashpower, is efficiently transformed into heat (measured in BTU). This heat byproduct can be captured and used to perform additional work. Miner operators around the world have begin to capture and make use of their computer equipment's thermal energy to heat their homes, pools, greenhouses and even aquatic fish ponds. 
+                    </br></br>Often described as &#034wasted energy&#034, it is becoming increasingly clear that traditional radiant heating is wasteful in that the same amount of Watts, directly related to BTUs, could additionally be securing the hardest monetary network in existience. As we continue to devise new ways to utilize Bitcoin's close ties to energy, what will the world look like in another 14 years, 7 halvings into the monetary network's lifespan. Time (and energy) will tell.
+                  </p>
+		              </br></br>
+		            </div>
+                <div id = "entry 001" class = "twelve columns">
+	                <h3><strong>THE GENESIS OF <strong style="color: #F2A900;">BITCOIN</strong>, 14 YEARS LATER</strong></h3>
+	                <h4>Rebuilding our world in Satoshi's image.</h4>
+			            <div class = "ten columns"><figure><a href="./img/ExB_banner.png"><img class = "twelve columns" src="./img/ExB_banner.png" alt="Everything&#215Bitcoin Banner"></a></figure></div>
+                  <p class = "twelve columns"></br></br>Throughout humanity's existence, crucial technological breakthroughs have allowed us to thrive and move far beyond our limitations. Since our first discovery of fire, we have found ways to transform and transport energy in new, revolutionary ways. These innovations have spurred radical new ways of interacting, harnessing the potential of our planet's finite resources to form the future of our civilization's social, economic, political and geographic order.
+                    </br></br>January 3, 2009, humanity discovered digital scarcity. Through proof of work, energy and time are expended like with monies of ancient times. The work performed by these specialized computers secures the network, and the operators are given their bounty on a disinflationary schedule. In addition to storing work energy across time, Bitcoin's unique relationship with wasted and stranded energy allows for innovation across built infrastructure. A mere 14 years later, we are beginning to see the potential that bitcoin offers.
+                    </br></br>Humanity's proof of work today must provide for tomorrows' generations. With bitcoin, it can.
+                    </br></br></p>
+                  </br></br>
+		              </div>
                 </div>
-	        </div>
-        </div>
+                <div class = "twelve columns" id="contact">
+		              <a href="mailto:theospatial@gmail.com"><button class = "footbutton">theospatial@gmail.com</button></a> 
+	                <a href="https://www.linkedin.com/in/theodorelessman/"><button class = "footbutton">in/theodorelessman</button></a></h2>
+    	            <a href="https://twitter.com/everythingxbtc"><button class = "footbutton">@everythingxbtc</button></a> 
+		              <a href="https://astral.ninja/npub1enfjvvrakj3fc0r6pn8ftm2dkzpzwvd598lr8hez6qz76zm8vxusf009vf"><button class = "footbutton">npub...usf009vf</button></a> 
+		            </div>
+                <div class = "1/2 column u-push-right">
+	    	          <p>&copy 2023 Theodore Lessman</p>
+	              </div> 
+         </div>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
