--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
           <h2 id="statement"><strong style="color: #F2A900;">BITCOIN + LIGHTNING</strong>
             </br>
             <strong>CUSTOMER INTERACTIONS and 
-            </br>GIS / DATA PRODUCT: </strong></br>DESIGN, DEVELOPMENT, ANALYSIS, and VISUALIZATION</h2>
+            </br>SPATIAL DATA PRODUCT: </strong></br>DESIGN, DEVELOPMENT, ANALYSIS, and VISUALIZATION</h2>
           <div id = "intro" class="twelve columns">
-            <span><img class="five columns" id = "about_img" src=".\img\ts2023_hero.png" alt="Theodore AI Render by Lensa"></span>
+            <span><img class="five columns" id = "about_img" src=".\img\ts2023_hero.png" alt="Theodore, an AI Rendering by Lensa"></span>
           </div>
         </br>
         </br>    
         </div>
         <div>
           <h4 class="noteworthy" style="color: #F2A900;">Bitcoiner. Pleb Miner. 2140 hr+ Orange Pill.</h4>
-          <h4>Fighting environmental ignorance and economic colonialism.</br>
+          <h4>Fighting environmental hypocrisy and economic colonialism.</br>
           Find me on: birdapp:<a href="https://twitter.com/everythingxbtc">@everythingxbtc</a> nostr:<a href="https://astral.ninja/npub1enfjvvrakj3fc0r6pn8ftm2dkzpzwvd598lr8hez6qz76zm8vxusf009vf">@everythingxbtc</a></h4>
           <blockquote class = 'nine columns' style="margin: 1em; border-style: solid; border-color: #F2A900; border-left: 0em; border-top: 0em; border-bottom: 0em;">"I&#39ve been active in bitcoin&#39s network since 2019. At some point I became convinced there was a way to fix the global monetary system and couldn&#39t resist to keep thinking about it."</br><figcaption style="margin-left: 3em;">~ Me, <cite>not Satoshi Nakamoto</cite></f></blockquote>
         </br>
@@ -81,7 +81,7 @@
           <p class="twelve columns">        
             </p>
           <p class="twelve columns">
-              I am seeking an opportunity to serve as a customer oriented bitcoin technologist for a <strong style="color: #F2A900;">Bitcoin</strong><strong> only company</strong>. 
+              I am seeking an opportunity to serve as a customer oriented bitcoin technologist, ideally for a <strong style="color: #F2A900;">Bitcoin</strong><strong> only company</strong>. 
               I enjoy meaningful customer interactions and strive to transfer my years of experience in retail customer service and support to transform they way businesses connect with their customers through implementing <strong style="color: #F2A900;">Lightning</strong> POS systems, seamless UX, and intuitive UI.
               I continue to expand my knowledge in programming, design, and cutting edge technologies, and take pride in serving my customers with honesty, accessibility, and education.
               I will contribute my technical, analytical, visualization, and communication skills to provide exceptional products and services, to work towards data-driven policy change and to develop innovative applications, products, and experiences.
